[project]
name = "resistorkit"
version = "0.1.1"
description = "A collection of utilities and tools for various projects."
readme = "README.md"
authors = [
    { name = "Francisco Arenas", email = "francis.arenasv@uc.cl" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
resistorkit = "resistorkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
